--- a/VisibleConfusion/VisibleConfusion.csproj
+++ b/VisibleConfusion/VisibleConfusion.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Emgu.CV.Bitmap" Version="4.8.0.5324" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.8.0.5324" />
     <PackageReference Include="Emgu.CV.Wpf" Version="4.8.0.5324" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.1" />
   </ItemGroup>
 
   <ItemGroup>
