--- a/VisibleConfusion/VisibleConfusion.csproj
+++ b/VisibleConfusion/VisibleConfusion.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MVVM\ViewModel\" />
+  </ItemGroup>
+
 </Project>
